--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A software imagineer with a passion for mobile development.">
+  <meta name="description" content="An experienced software engineer with a passion for mobile application development.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
