--- a/web/index.html
+++ b/web/index.html
@@ -65,6 +65,32 @@
   
   
   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -73,7 +99,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #274472;
+      background-color: #60a3d9;
           background-size: 100% 100%;
     }
 
@@ -125,7 +151,7 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: #274472;
+        background-color: #122035;
           }
     }
   </style>
@@ -143,6 +169,19 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
   
   
